  * fix stepconf 'external estop' pin
  * fix homing in stepconf-created configurations
  * fix halshow 'watch pin'
  * restore cone rotation when the A-axis moves
  * fix 'scara' sample configuration
  * fix display of home and limit switches on XYZBC machines
  * improve legibility of running line in text area
  * additional french documentation translation, including gcode quickref

 -- Jeff Epler <jepler@unpythonic.net>  Tue, 20 Nov 2007 15:55:31 -0600

emc2 (1:2.2.1) unstable; urgency=low

  * fix packaging of stepconf.glade
  * german translation improvements
  * package additional new-in-2.2.x programs (pumagui, scaragui, hexagui
    tracking-test, teach-in)
  * fix problems using v2.1 var file -- it's silently upgraded with the new
    entries used by v2.2 instead of issing weird errors at startup
  * fix problem with probe_parport on certain machines
  * fix problem with non-integer INTRO_TIME 

 -- Jeff Epler <jepler@unpythonic.net>  Wed,  7 Nov 2007 20:18:34 -0600

emc2 (1:2.2.0) unstable; urgency=low

  * Bump version for release
  * G41.1, G42.1, G43.1 to take tool parameters from gcode instead of tool
    table
  * split libposemath and libemcini from libnml
  * new inifile item: [HAL]SHUTDOWN, a .hal file run at a clean shutdown of emc
  * new component: deadzone
  * new component: tristate_float
  * new component: random
  * new components: clarke2 clark3 clarkeinv
  * hexapod visualization
  * scara robot sample configuration with visualization
  * opengl machine visualization for several "robots"
  * new m5i20 firmwares
  * M66 - digital input control (wait & read external HAL inputs)
  * userspace "comp"
  * hal-8255 driver for a PCI multiple-8255 card
  * tapered in/out on multipass threading canned cycle
  * debug and print output from the interpreter
  * named parameters in the interpreter
  * puma robot kinematics
  * sample configuration for a puma robot
  * reduce quantization of the encoder module's velocity output